force-app/main/default/objects/sugati__Room_Type__c/sugati__Room_Type__c.object-meta.xml
<CustomObject>
    <description>A list of room types for each accommodation option.</description>
    <label>Room Type</label>
    <nameField>
        <displayFormat>RT-{0000000000}</displayFormat>
        <label>Room Type ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Room Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>