force-app/main/default/objects/sugati__Room_Type__c/fields/sugati__RT_Description__c.field-meta.xml
<CustomField>
    <fullName>sugati__RT_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>