force-app/main/default/objects/sugati__Room_Type__c/fields/sugati__RT_Display_on_Search__c.field-meta.xml
<CustomField>
    <fullName>sugati__RT_Display_on_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check it if you want to see this room type in the Room Search.</inlineHelpText>
    <label>Display on Search</label>
    <type>Checkbox</type>
</CustomField>