force-app/main/default/objects/sugati__Room_Type__c/fields/sugati__RT_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__RT_Field_Name__c</fullName>
    <label>Field Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Meal Basis</fullName>
            </value>
            <value>
                <fullName>Occupancy</fullName>
            </value>
            <value>
                <fullName>Room Type</fullName>
            </value>
            <value>
                <fullName>Class</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>