force-app/main/default/objects/sugati__Room_Type__c/fields/sugati__RT_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__RT_Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>