force-app/main/default/objects/sugati__Room_Type__c/fields/sugati__RT_Sleep_Comfortable__c.field-meta.xml
<CustomField>
    <fullName>sugati__RT_Sleep_Comfortable__c</fullName>
    <label>Sleep Comfortable</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>