force-app/main/default/objects/sugati__Room_Type__c/fields/sugati__RT_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__RT_Supplier__c</fullName>
    <label>Supplier</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Room Types</relationshipLabel>
    <relationshipName>Room_Types</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>