force-app/main/default/objects/sugati__Room_Type__c/fields/sugati__RT_Units__c.field-meta.xml
<CustomField>
    <fullName>sugati__RT_Units__c</fullName>
    <inlineHelpText>Total no of rooms available in this hotel</inlineHelpText>
    <label>Units</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>