force-app/main/default/objects/sugati__Room_Type__c/fields/sugati__RT_Widgety_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>sugati__RT_Widgety_Reference_ID__c</fullName>
    <label>Widgety Reference ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>