force-app/main/default/objects/sugati__Room_Type__c/fields/sugati__S_RT_Is_Cabin__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RT_Is_Cabin__c</fullName>
    <formula>sugati__RT_Supplier__r.RecordType.Name == &apos;Cruise&apos;</formula>
    <label>Is Cabin?</label>
    <type>Checkbox</type>
</CustomField>